# budget_tracker_tui

./: Cargo.toml  LICENSE  README.md  budget_categories.csv  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: user-guide.md
src/: app.rs  category_store.rs  config.rs  csv_io.rs  database.rs  event.rs  main.rs  model.rs  persistence.rs  recurring.rs  transaction_store.rs  ui.rs  validation.rs
src/app/: add_edit.rs  budget.rs  category_manager.rs  category_select.rs  filter.rs  fuzzy_search.rs  help.rs  input.rs  mod.rs  recurring.rs  settings.rs  settings_types.rs  sort.rs  state.rs  summary.rs  transaction_io.rs  update_checker.rs  util.rs
src/db/: category_store.rs  database.rs  mod.rs  transaction_store.rs
src/events/: add_edit_mode.rs  budget_mode.rs  category_manager_mode.rs  filter_mode.rs  fuzzy_search_mode.rs  help_mode.rs  mod.rs  normal_mode.rs  recurring_mode.rs  runner.rs  selection_mode.rs  settings_mode.rs  summary_mode.rs  transaction_io_mode.rs
src/ui/: budget.rs  category_manager.rs  category_summary.rs  dialog.rs  filter.rs  fuzzy_search.rs  help.rs  help_popup.rs  helpers.rs  mod.rs  recurring.rs  settings.rs  status.rs  summary.rs  transaction_form.rs  transaction_io.rs  transaction_table.rs  update_popup.rs
