[package]
name = "budget_tracker_tui"
version = "1.2.0"
edition = "2021"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "A very simple TUI budget tracker app"


[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
serde_json = "1.0.145"
rust_decimal = { version = "1.39.0", features = ["serde"] }
ureq = { version = "3.1.4", features = ["json"] }
semver = "1.0.27"

[[bin]]
name = "Budget_Tracker"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.27"

[package.metadata.bundle]
name = "Budget Tracker"
identifier = "io.github.Feromond.budget_tracker_tui"
icon = ["/budget_tracker_icon.png"]
version = "1.1.3"
copyright = "Copyright Ventra Software Inc. 2025. All rights reserved."
category = "Finance"
short_description = "A simple TUI budget tracker."

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
