[package]
name = "budget_tracker_tui"
version = "1.3.1"
edition = "2021"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "A feature rich TUI budget tracker app"
license-file = "LICENSE"


[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
serde_json = "1.0.149"
rust_decimal = { version = "1.41.0", features = ["serde"] }
ureq = { version = "3.3.0", features = ["json"] }
semver = "1.0.27"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[[bin]]
name = "Budget_Tracker"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.bundle]
name = "Budget Tracker"
identifier = "io.github.Feromond.budget_tracker_tui"
icon = ["/budget_tracker_icon.png"]
version = "1.3.1"
copyright = "Copyright Ventra Software Inc. 2025. All rights reserved."
category = "Finance"
short_description = "A feature rich TUI budget tracker app"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
