[package]
name = "budget_tracker_tui"
version = "1.4.1"
edition = "2024"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "A feature rich TUI budget tracker app"
license = "GPL-3.0-only"
repository = "https://github.com/Feromond/budget_tracker_tui"
keywords = ["tui", "budget", "finance", "terminal", "tracker"]
categories = ["command-line-utilities", "finance"]

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
serde_json = "1.0.150"
rust_decimal = { version = "1.42.0", features = ["serde"] }
ureq = { version = "3.3.0", features = ["json"] }
semver = "1.0.28"
rusqlite = { version = "0.40.0", features = ["bundled"] }

[[bin]]
name = "Budget_Tracker"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.bundle]
name = "Budget Tracker"
identifier = "io.github.Feromond.budget_tracker_tui"
icon = ["/budget_tracker_icon.png"]
version = "1.4.1"
copyright = "Copyright Ventra Software Inc. 2026. All rights reserved."
category = "Finance"
short_description = "A feature rich TUI budget tracker app"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
